--- a/components/Emotions/emotionsContent.module.css
+++ b/components/Emotions/emotionsContent.module.css
@@ -26,3 +26,26 @@
 		width: 80vw;
 	}
 }
+
+/* new styles added */
+.swiperbutton {
+	display: flex;
+	position: absolute;
+	top: calc(50% - 12px);
+	z-index: 10;
+	cursor: pointer;
+}
+.swiperbutton svg {
+	width: 4.2rem;
+	height: 4.2rem;
+}
+.imageswiperbuttonprev {
+	left: 5px;
+}
+.imageswiperbuttonnext {
+	right: 5px;
+}
+.swiperbuttondisabled {
+	opacity: 0.5;
+	pointer-events: none;
+}
