--- a/components/masterTheses/finalSolution/SolutionSection.module.css
+++ b/components/masterTheses/finalSolution/SolutionSection.module.css
@@ -3,16 +3,69 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 20px;
+  padding: 80px 0px;
   width: 100vw;
+  background-color: #5145bf;
+}
+
+.solutionContainer {
+  background-color: #5145bf;
+  width: 100vw;
+  padding: 200px 0px;
+}
+
+.innerContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
 }
 
 .header {
-  font-size: 2em;
-  margin-bottom: 20px;
+  color: #fff;
+  font-size: 64px;
+  font-weight: 600;
+  /* width: 80%; */
+  margin-bottom: 16px;
+}
+
+.divider {
+  width: 80%;
+  height: 2px;
+  background-color: #fff;
+  margin-bottom: 96px;
 }
 
 .part {
   width: 80%;
   margin-bottom: 20px;
+}
+
+@media (max-width: 90em) {
+  .part {
+    width: 85%;
+  }
+  .header {
+    font-size: 40px;
+  }
+}
+
+@media (max-width: 25em) {
+  .container {
+    padding: 40px 0px;
+  }
+
+  .header {
+    font-size: 32px;
+  }
+
+  .divider {
+    width: 90%;
+    margin-bottom: 48px;
+  }
+
+  .part {
+    width: 95%;
+  }
 }
