--- a/components/masterTheses/researchQuestion/ResearchQuestion.module.css
+++ b/components/masterTheses/researchQuestion/ResearchQuestion.module.css
@@ -3,10 +3,10 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-top: 80px;
   width: 100vw;
   background-color: #988cff;
-  padding: 160px;
+  padding: 240px 0px;
+  margin-top: 160px;
 }
 
 .header {
@@ -17,10 +17,32 @@
 
 .question {
   color: #ffffff;
-  font-size: 24px;
+  font-size: 32px;
   font-style: italic;
   font-weight: 500;
-  margin-top: 20px;
+  margin-top: 24px;
   width: 60%;
   text-align: center;
+}
+
+@media (max-width: 90em) {
+  .container {
+    width: 100vw;
+  }
+}
+
+@media (max-width: 25em) {
+  .container {
+    margin-top: 40px;
+
+    padding: 120px 0px;
+  }
+
+  .header {
+    font-size: 32px;
+  }
+  .question {
+    width: 90%;
+    font-size: 16px;
+  }
 }
