--- a/components/masterTheses/tripleDiamond/TripleDiamond.module.css
+++ b/components/masterTheses/tripleDiamond/TripleDiamond.module.css
@@ -5,24 +5,53 @@
   align-items: center;
   justify-content: center;
   text-align: center;
-  margin-top: 80px;
+  margin-top: 160px;
   width: 80vw;
 }
 
 .container h2 {
   font-size: 48px;
   font-weight: 600;
-  text-align: left;
+  text-align: center;
   width: 100%;
+  margin-bottom: 8px;
 }
 
 .container p {
   font-size: 20px;
-  text-align: left;
-  width: 100%;
+  text-align: center;
+  width: 60%;
 }
 
 .image {
-  width: 80%;
+  margin-top: 40px;
+  width: 60%;
   height: auto;
+}
+@media (max-width: 90em) {
+  .container {
+    width: 90vw;
+  }
+}
+
+@media (max-width: 25em) {
+  .container {
+    margin-top: 80px;
+
+    width: 85vw;
+  }
+
+  .container h2 {
+    font-size: 32px;
+    text-align: left;
+  }
+  .container p {
+    font-size: 16px;
+    text-align: left;
+    width: 100%;
+  }
+  .image {
+    margin-top: 16px;
+    width: 100%;
+  }
 }
