--- a/components/masterTheses/microAdjustments/MicroAdjustments.module.css
+++ b/components/masterTheses/microAdjustments/MicroAdjustments.module.css
@@ -39,6 +39,7 @@
 
 .video video {
   width: 100%;
+  pointer-events: none; /* Disable all mouse and touch interactions */
 }
 
 @media (max-width: 90em) {
